modules/static/overrides.css
/* ... */
/* Use Furman-style buttons hover and press effects. Note that we do
not specify a background-color or text color on the default state
since the button may have been configured to have a different default
style via the blocks editor. */
html #page :where(.btn, button[type='submit'], .wp-block-button .wp-block-button__link) {
	transition:
		background-color 120ms ease,
		box-shadow 120ms ease;
	min-height: 38px;
	display: inline-flex;
	align-items: center;
	height: fit-content;
}
html #page :where(.btn, button[type='submit'], .wp-block-button .wp-block-button__link):hover {
	box-shadow: none !important;
}
html #page :where(.wp-block-button.is-style-outline .wp-block-button__link) {
	--box-shadow-color: var(--shi-divider-color);
	box-shadow: inset 0 0 0 1px var(--box-shadow-color);
	border-width: 0 !important; /* use box-shadow instead */
	color: inherit !important;
}
html #page :where(.btn, .wp-block-button.is-style-plain .wp-block-button__link) {
	background-color: transparent;
	border-width: 0 !important; /* use box-shadow instead */
	color: inherit !important;
}
html #page :where(.btn.inherit-color) {
	color: inherit !important;
}
html #page :where(.btn, button[type='submit'], .wp-block-button .wp-block-button__link):hover {
	background-color: var(--shi-color-yellow);
	--box-shadow-color: var(--shi-color-yellow);
	color: var(--shi-color--on-yellow) !important;
	text-decoration: none;
}
html #page :where(.btn, button[type='submit'], .wp-block-button .wp-block-button__link):active {
	background-color: var(--shi-color-blue);
	--box-shadow-color: var(--shi-color-blue);
	color: var(--shi-color--on-blue) !important;
}
html #page :where(.btn a:hover, .btn a:active) {
	color: inherit !important;
}

/* For plain buttons (no outline or background) we offset by the amount of padding
so the button does not look out of line with other elements. */
html #page :where(.btn, .wp-block-button.is-style-plain .wp-block-button__link) {
	margin: -0.3375rem -0.675rem;
	@media (min-width: 992px) {
		margin: -0.375rem -0.75rem;
	}
}

/* By default, the footer has a small shadow above itself.
Since we use border-lines instead of shadows elsewhere in our
css, we need to remove the shadow */
footer {
	box-shadow: none !important;
}

/* the default footer padding is excessive */
footer {
	padding-block: 16px !important;
}
#footer-block > .wp-block-group {
	padding-block: 0 !important;
	margin-block: 0 !important;
}

/* block button rows do not have margin, but we need them to have
margin if there is a text element after it */
.wp-block-buttons + * {
	margin-top: 1rem;
}

/* Show a new tab indicator next to links with target="_blank" */
a[target='_blank']::after {
	content: ' ↗';
	font-size: 0.75em;
	vertical-align: super;
}
a.wp-block-button__link[target='_blank'] {
	display: inline-block !important;
	text-box-trim: trim-both;
	text-box-edge: cap alphabetic;
	position: relative;
	padding-right: calc(12px + 14px + 8px); /* button padding + icon width + gap */
}
a.wp-block-button__link[target='_blank']::after {
	content: '';
	display: inline-flex;
	position: absolute;
	inset: 0 12px 0 auto; /* 12px = button padding */
	width: 14px;
	mask: url('data:image/svg+xml,%3Csvg%20aria-hidden%3D%22true%22%20class%3D%22svg%22%20fill%3D%22currentColor%22%20height%3D%22100%25%22%20viewBox%3D%220%200%2016%2016%22%20width%3D%22100%25%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M1%201h8v1H2v12h12V7h1v8H1zm7.325%207.382L14%202.707V5h1V1h-4v1h2.293L7.618%207.675z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E')
		no-repeat center / contain;
	background-color: currentColor;
	pointer-events: none;
}

/* Force the border color on eparator blocks to be respected. */
.wp-block-separator:not(.is-style-wide):not(.is-style-dots):not(.is-style-default) {
	background-color: transparent !important;
	border-color: currentColor !important;
	border-top-width: 1px !important;
}
.wp-block-separator.is-style-default,
hr {
	border-color: var(--shi-divider-color) !important;
	border-top-width: 1px !important;
}

/* Hide the list of submitted values on the form submission success page.
We do this because it shows ALL values, including hidden values. */
.coblocks-form__submitted ul {
	display: none;
}

/* There is too much margin above form submission buttons */
.coblocks-form__submit {
	margin-top: 0.5rem;
}

/* Enable dark mode support. Including light and dark allows browsers to pick the 
correct mode based on the user's preference. */
:root {
	color-scheme: light dark;
}
a {
	color: var(--shi-adaptive-color--purple);
	transition: 120ms color ease;
	&:hover {
		color: light-dark(var(--shi-color-purple), oklch(from var(--shi-color-purple) calc(l + 0.42) calc(c - 0.08) h));
	}
	&:active {
		color: light-dark(var(--shi-color-purple), oklch(from var(--shi-color-purple) calc(l + 0.32) calc(c - 0.06) h));
	}
}
.entry-col-boxed article {
	background-color: var(--shi-surface-background-color) !important;
	color: var(--shi-surface-color);

	box-shadow: inset 0 0 0 1px var(--shi-divider-color) !important;

	h2 a {
		color: light-dark(var(--shi-color-purple), var(--shi-surface-color));
	}
}
.form-control,
body .calendar-plus #calendar-plus-category,
body .calendar-plus #calendar-plus-search,
input[type='email']:not(.form-control),
input[type='search']:not(.form-control),
input[type='tel']:not(.form-control),
input[type='text']:not(.form-control),
select:not(.form-control),
textarea:not(.form-control) {
	background-color: var(--shi-surface-background-color);
	color: var(--shi-surface-color);
	border-color: var(--shi-divider-color);
}
#hero-main {
	--hero-main-bg-color: var(--shi-surface-background-color);
	.hero-content {
		color: var(--shi-surface-color);
	}
}
/* ... */

